<resources>
    <string name="app_name">MaMi Etiquetas</string>
    <string name="hint_usuario">Ingrese número DNI</string>
    <string name="text_login">Ingresar</string>
    <string name="error_message_usuario">Ingrese un número de DNI valido</string>
    <string name="error_message_password">Ingrese password</string>
    <string name="error_valid_usuario_password">Usuario y/ó Password incorrectos, verifique.</string>
    <string name="error_valid_usuario">Usuario incorrecto, verifique.</string>
    <string name="text_combo">Selecione tipo etiqueta</string>
    <string name="turn_on_flashlight">Flash on</string>
    <string name="turn_off_flashlight">Flash off</string>
    <string name="menuItem1">Exportación</string>
    <string name="menuItem2">Iniciar scaneo</string>
    <string name="menuItem3">Opciones</string>
    <string name="menuItem4">Listar carga</string>
    <string name="descripcion1">Exportación a Excel</string>
    <string name="descripcion2">Iniciar scaneo de productos</string>
    <string name="descripcion3">Opciones del sistema</string>
    <string name="descripcion4">Listar carga de codigos</string>
    <string name="scanner_error">Error en la lectura del codigo</string>
    <string name="carga_manual">Carga manual</string>
    <string name="carga_manual_message">Ingreso manual</string>
    <string name="carga_manual_hint">Ingrese un código</string>
    <string name="btn_grabar">Grabar</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_configReset">Reset carga</string>
    <string name="btn_configUpdateEtiqueta">Actualizar etiquetas</string>
    <string name="btn_configUpdateSucursales">Actualizar sucursales</string>
    <string name="error_updateEtiquetas">Error al actualizar formatos de etiquetas</string>
    <string name="lblRestAPI">URL REST</string>
    <string name="deviceName">Nombre equipo</string>
    <string name="recordarUsuario">Recordar usuario?</string>
    <string name="created_by">by José Salvini ©</string>
    <string name="subirCarga">Subir carga</string>
    <string name="exportarCarga">Exportar carga</string>
    <string name="descripcionConfig1">Subir carga</string>
    <string name="descripcionConfig2">Actualizar formato etiquetas</string>
    <string name="descripcionConfig3">Vaciar carga etiquetas</string>
    <string name="descripcionConfig4">Actualizar sucursales</string>
    <string name="descripcionExportar">Exportar carga</string>
    <string name="diasSesion">Fecha inicio sesion</string>
    <string name="online">On line</string>
    <string name="offline">Off line</string>
    <string name="textViewModo">Seleccione el modo de trabajo.</string>
    <string name="spinner_sucursal">Seleccione la sucursal de trabajo</string>
    <string name="spinner_usuario">Login usuario</string>
    <string name="sucursal">Sucursal</string>
    <string name="editarURL">Editar</string>
    <string name="guardarURL">Guardar</string>
    <string name="defaultURL">Por defecto</string>
    <string name="hint_url">URL API</string>
    <string name="error_message_url">Ingrese una dirección valida.</string>
    <string name="pathdescripcion">Carpeta de descarga:</string>
    <string name="pathusuario">Path archivos</string>
    <string name="selectpath">Seleccionar directorio</string>
    <string name="openfile">Abrir archivo</string>
    <string name="descripcionOpen">Abrir archivo</string>
    <string name="lblCantidadCopias">Cantidad de copias</string>
    <string name="lblBotonAceptar">Aceptar</string>
    <string name="lblBotonCancelar">Cancelar</string>
    <string name="lblCantidad">Cantidad</string>
    <string name="descripcionLogo">supermami</string>
    <string name="descripcionAnimacion">carrito</string>
    <string name="vesionApp">Version app</string>
    <string name="textViewDNI">Ingrese número DNI</string>
</resources>
