<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAlternative"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ActivityClass.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/textstyle"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDevice"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/deviceName"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSucursal"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/sucursal" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSesion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/diasSesion" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/iButtonExportar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:contentDescription="@string/descripcion1"
                app:srcCompat="@drawable/excelm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="130dp"
                android:text="@string/menuItem1"
                android:textAlignment="center"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/iButtonScan"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:contentDescription="@string/descripcion2"
                app:srcCompat="@drawable/barcoderm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="130dp"
                android:text="@string/menuItem2"
                android:textAlignment="center"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame3"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/iButtonConfig"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:contentDescription="@string/descripcion3"
                app:srcCompat="@drawable/settingsm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="130dp"
                android:text="@string/menuItem3"
                android:textAlignment="center"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame4"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/iButtonViewQR"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:contentDescription="@string/descripcion4"
                app:srcCompat="@drawable/qrreaderm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="130dp"
                android:text="@string/menuItem4"
                android:textAlignment="center"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>


</LinearLayout>