<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ActivityClass.SesionModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/colorBackground"
        android:gravity="center|top"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewModo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_marginBottom="30dp"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/textViewModo" />

        <FrameLayout
            android:id="@+id/frameModesesion1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/btnOnLine"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:contentDescription="@string/descripcionConfig1"
                app:srcCompat="@drawable/online" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="130dp"
                android:text="@string/online"
                android:textAlignment="center"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameModesesion2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/btnOffLine"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:contentDescription="@string/descripcionConfig2"
                app:srcCompat="@drawable/offline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="130dp"
                android:text="@string/offline"
                android:textAlignment="center"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>


</RelativeLayout>