<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/splashcolor"

    tools:context=".Main.SplashActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/descripcionLogo"
            android:src="@drawable/supermami" />

        <ImageView
            android:id="@+id/imageViewCart"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:contentDescription="@string/descripcionAnimacion"
            android:src="@drawable/carticon" />

    </android.support.v7.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="@string/created_by"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>