<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cargaEAN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAlternative"
    tools:context=".ActivityClass.CargaEANActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundAlternative"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundAlternative"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCodigoBarra"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordercantidad"
                android:digits="15"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:text="0000123456789"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="40sp"
                android:textStyle="bold"
                android:type="radial" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundAlternative"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTipoEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Tipo etiqueta"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border_spinner"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerEtiquetas"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:prompt="@string/text_combo"
                android:textAlignment="center"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:src="@drawable/arrowspinner" />


        </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundAlternative"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:text="Cantidad"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnAumentar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/colorBackground"
                app:srcCompat="@drawable/plus" />

            <TextView
                android:id="@+id/etCantidad"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercopias"
                android:gravity="center"
                android:hint="Solo se permiten números"
                android:inputType="number"
                android:text="1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnDisminuir"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorBackground"
                app:srcCompat="@drawable/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@color/colorBackgroundAlternative"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGrabar"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_grabar"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_finalizar"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>